# libktpnik

./: .gitignore  BACA.MD  README.md
C/: .c4droid  CMakeLists.txt
C/include/: .c4droid  ktpnik.h
C/libsrc/: .c4droid  ktpnik.c
C/sample/: .c4droid  sample.c
CPP/: .gitignore  CMakeLists.txt  README.MD
CPP/include/: ktpnik.hpp
CPP/ktpnik/: ktpnik.cpp
CPP/sample/: sample.cpp
CSharp/: ktpnik.sln
CSharp/ktpnik/: EmiyaSyahriel.KtpNik.csproj  KtpNik.cs  KtpNikError.cs
CSharp/ktpnik/Properties/: launchSettings.json
CSharp/sample/: EmiyaSyahriel.KtpNik.Sample.csproj  Program.cs
Docs/: C.md  CPP.md  CSharp.md
Go/ktpnik/: go.mod  ktpnik.go
Go/sample/: go.mod  sample.go
JS/: ktpnik.js  sample.html
Java/: settings.gradle.kts
Java/ktpnik/: build.gradle.kts
Java/ktpnik/main/src/emiyasyahriel/ktpnik/: KtpNik.java  KtpNikError.java
Java/sample/: build.gradle.kts
Java/sample/main/src/emiyasyahriel/ktpnik/: KtpNikSample.java
Rust/: Cargo.toml
Rust/ktpnik/: Cargo.toml
Rust/ktpnik/src/: lib.rs
Rust/sample/: Cargo.toml
Rust/sample/src/: main.rs
V/: .gitignore  Makefile  README.MD
V/buildDir/: ktpnik.o.c
V/ktpnik/: lib.v
V/sample/: main.v
